--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>concursos</name>
-	<comment>Project concursos created by Buildship.</comment>
+	<name>provas</name>
+	<comment>Project provas created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
