--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
 	</context-param>
+	<context-param>
+	    <param-name>primefaces.THEME</param-name>
+	    <param-value>admin</param-value>
+	</context-param>
 	<display-name>provas</display-name>
 	<servlet>
 		<servlet-name>Jersey</servlet-name>
